--- a/src/assets/css/Solution.css
+++ b/src/assets/css/Solution.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 33%;
-  max-width: 800px;
+  max-width: 900px;
   padding: 20px;
   margin: auto;
 }
@@ -708,4 +708,57 @@ input[type="checkbox"]:checked + .toggleSwitch .toggleButton {
 
 .basic-deduction-box {
   padding: 10px;
+}
+
+.checkbox-info {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.tooltip-box {
+  visibility: visible;
+  background-color: #fff;
+  color: #757575;
+  border: 1px solid #d9d9d9;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-weight: normal;
+  position: absolute;
+  z-index: 1;
+  top: 100%; /* 아이콘 위에 툴팁 표시 */
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.checkbox-info:hover .tooltip-box {
+  visibility: visible;
+  opacity: 1;
+}
+
+.input-year-house {
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 130px;
+  font-family: "Pretendard-Regular";
+  font-size: 14px;
+}
+
+.select-year-house {
+  display: flex;
+  font-size: 12px;
+  flex-direction: column;
+  font-family: "Pretendard-SemiBold";
+}
+
+.select-year-house-box {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
