--- a/src/assets/css/Solution.css
+++ b/src/assets/css/Solution.css
@@ -113,13 +113,14 @@ select:focus {
 }
 
 .card-body p {
-  font-size: 20px;
+  font-size: 17px;
   color: #000;
   font-weight: bold;
 }
 
 .card-body .text span {
   color: #90b7fb;
+  font-size: 13px;
 }
 
 .discount-details {
@@ -152,7 +153,7 @@ select:focus {
   text-align: center;
 }
 
-.discount-item .amount {
+.discount-item .card-amount {
   min-width: 80px;
 }
 
@@ -368,7 +369,7 @@ input[type="radio"]:checked {
 
 .irp-body p {
   text-align: center;
-  font-weight: bold;
+  font-family: "Pretendard-SemiBold";
   color: #757575;
 }
 
