--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -182,6 +182,7 @@ li {
   padding: 20px;
   z-index: 1000;
   width: 100vw;
+  box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.1);
 }
 
 .nav-item:hover .dropdown-menu {
