--- a/src/assets/css/InquiryResult.css
+++ b/src/assets/css/InquiryResult.css
@@ -167,16 +167,19 @@
   font-weight: bold;
 }
 
-.refund-detail-item:last-child {
-  border-bottom: none;
-}
-
 .details-container {
   padding: 20px;
   color: #757575;
   font-size: 13px;
 }
 
+.solutionBefore {
+  display: flex;
+  padding: 20px 0px;
+  text-align: right;
+  justify-content: flex-end;
+  font-family: "Pretendard-SemiBold";
+}
 .deduction-detail-container {
   background-color: #f3f4f6;
   padding: 30px;
